<resources>
    <string name="app_name">HealthApp</string>
    <string name="title_home">Home</string>
    <string name="title_browse">Browse</string>
    <string name="title_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="profile_header">Profile</string>
    <string name="title_activity_settings">Preferences</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="unit_title">Measurement Systems</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>